[gd_scene load_steps=5 format=3 uid="uid://d4jcuwb3v5hfi"]

[ext_resource type="Script" path="res://addons/godot_gpt/examples/chat/chat_example.gd" id="1_1e0cm"]
[ext_resource type="PackedScene" uid="uid://di8cv15276ai6" path="res://addons/godot_gpt/examples/chat/chat_entry/chat_entry.tscn" id="2_2q4w4"]
[ext_resource type="Script" path="res://addons/godot_gpt/gpt_chat_request.gd" id="3_ve0ne"]
[ext_resource type="PackedScene" uid="uid://db4dkaa7rodme" path="res://addons/godot_gpt/examples/common/prompt_input/prompt_input.tscn" id="4_37pu7"]

[node name="chat" type="Control" node_paths=PackedStringArray("gpt", "chat_history_scroll", "chat_history", "prompt_input", "file_name", "write_file")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1e0cm")
gpt = NodePath("GPTChatRequest")
chat_history_scroll = NodePath("VBoxContainer/ScrollContainer")
chat_history = NodePath("VBoxContainer/ScrollContainer/chat_history")
prompt_input = NodePath("VBoxContainer/prompt_input")
chat_entry_scene = ExtResource("2_2q4w4")
file_name = NodePath("VBoxContainer/HBoxContainer/LineEdit")
write_file = NodePath("VBoxContainer/HBoxContainer/Button")

[node name="GPTChatRequest" type="HTTPRequest" parent="."]
script = ExtResource("3_ve0ne")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="chat_history" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="prompt_input" parent="VBoxContainer" instance=ExtResource("4_37pu7")]
layout_mode = 2
text_box_placeholder = "Ask ChatGPT a question!"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "main"
placeholder_text = "文件名"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "将上个回复内容写入该文件名称"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="StartMarkerInput" type="LineEdit" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "```js"
placeholder_text = "正则起始，默认```js"

[node name="EndMarkerInput" type="LineEdit" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "```"
placeholder_text = "正则结束，默认```"

[node name="RefactorButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "修复代码"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RefactorButton" to="." method="_on_refactor_button_pressed"]

[editable path="VBoxContainer/prompt_input"]
